Automagically building YurtSki from moba

--- a/faq.html
+++ b/faq.html
@@ -157,7 +157,17 @@ The trailhead is located on Cottonwood Lakes road at the winter plowing boundary
 
 
 <h4 class="faq-section toggle-child-on-click">What is the difference between the Lupine Yurt and the Alpine Yurt?</h4>
-<p class='faq-expand'>About two hundred vertical feet and ¾ mile separate the two yurts. Both yurts are similarly equipped. The Lupine maybe better suited for skiing off the Lookout/ Supernatural Area of the horseshoe where as the Alpine is slightly better situated for skiing the back bowls. The Alpine Yurt is slightly larger and can more easily accommodate bigger groups.</p>
+<div class='faq-expand'>
+		<div class='row'>
+	<img class='u-full-width' src='img/yurts_on_map.jpg'>
+
+	<p>The Alpine yurt sits about 200 vertical feet higher and 0.75 miles past the Lupine Yurt on the Morrell Mountain Road. Slightly larger, the Alpine Yurt sleeps 10 comfortably while Lupine sleeps 8.</p>
+
+	<p>Both yurts are similarly equipped with 2 double-over-double bunk beds, woodstove, table, and kitchen with propane stoves. Alpine has 2 futon couches that provide sleeping for 2 extra people. The Lupine yurt maybe better suited for skiing off the Lookout/ Supernatural Area of the horseshoe where as the Alpine is slightly better situated for skiing the back bowls.</p>
+</div>
+
+
+</div>
 
 <h4 class="faq-section toggle-child-on-click">What is the elevation of the yurts?</h4>
 <p class='faq-expand'>The Alpine Yurt sits at approximately 6800’ and the Lupine yurt sits at approximately 6600’</p>
@@ -166,17 +176,20 @@ The trailhead is located on Cottonwood Lakes road at the winter plowing boundary
 <p class='faq-expand'>The Seeley-Swan area of Montana is known for its colder weather and heavier snow falls. This translates to incredible cold smoke powder skiing. On April 1st of 2009, we had almost 14 feet of snow pack, not fall at the Alpine Yurt. The average seems to be around 10 feet. Storms dumping multiple feet of snow are not uncommon.</p>
 
 <h4 class="faq-section toggle-child-on-click">What is a gear haul?</h4>
-<p class='faq-expand'>Take the weight off your back and off your mind. YurtSki will haul your group’s gear to the door of the yurt. Gear haul costs $350 per 6 people, each way.<br>
+<p class='faq-expand'>
+	<img class='u-pull-right one-half column ml12 simple-outline' src='img/gearhaul.jpg'>
+The trip into YurtSki starts with 5 miles of flat travel on the Cottonwood Lakes Road (groomed), and then 6 miles up the Morrell Mountain Lookout Road, gaining nearly 2,000 feet in elevation.
 <br>
-The trip into Yurt Ski is 11 miles on the road, or 8 miles if you cut the switchback and climb with skins.  A gear haul in makes the most of your trip by getting you and your stuff into the yurts so you can ski and enjoy!  We will also make sure to point out the freshwater spring, start you off with a full supply of water, and make sure the firewood is stocked and ready.</p>
+A <strong>gear haul</strong> makes the most of your trip by hauling both your crew and all of your gear all the way to the yurts via snowmobile. This allows you to pack food in large coolers (convenient), haul more beer, and generally bring more to the yurt. We have the right snowmobiles and extra-large tobaggons for the job.
+<br>
+As part of this service, we will provide clean sheets and collect 10 gallons of water from the spring to get your trip started. On the last day of your trip, we will return to load your gear and tow your group back out. If conditions permit, there is one final pitch of good skiing before towing back along the flat road.
+<br><br>
+<em>Gear haul costs $600 for up to 6 people, and +$150 per person after 6.</em>
+</p>
 
 <h4 class="faq-section toggle-child-on-click">Can we use our own snowmobiles and gear sleds to access the yurts?</h4> 
 <p class='faq-expand'>Yes! We offer gear hauls as an add-on, but it is not required, and many groups like to do this on their own! Just know that sometimes it can be an "adventurous day" depending on what mother nature throws at you and your crew.</p>
 
-
-<!-- <h4 class="faq-section toggle-child-on-click">Why are there daily minimums?</h4>
-<p class='faq-expand'>The minimum allows us to ensure exclusivity to your group while staying at the yurts. We have different minimums for each yurt to accommodate different group sizes. Minimums are in dollars, not people. For example, groups of 2 or 3 are more than welcome to rent out the Lupine Yurt on a weekend night, they will just be paying the price of a 4 person group. Additionally, due to the terrain at the yurts, we require all parties to be at least 2 people for avalanche safety.</p>
- -->
 <h4 class="faq-section toggle-child-on-click">How many people can stay in the yurts?</h4>
 <p class='faq-expand'>Both yurts have 2 full-size bunk beds allowing for individual sleeping for 4 people or 8 if sharing the full-size mattresses. Additionally, the slightly larger Alpine Yurt has 2 futon couches that can be converted into beds.</p>
 
@@ -363,8 +376,6 @@ Trips canceled less than 1 month prior to the start date are still required to b
 </footer>
 
 <body>
-
----
 
 <!-- Ensure navigation works properly -->
 <script type="text/javascript">
