--- a/index.html
+++ b/index.html
@@ -193,33 +193,29 @@
 
 
 
-<p>Throughout the season we also offer a number of <a href="classes.html" class='link'>avalanche classes and backcountry skiing clinics</a> to both introduce people to the wonders of backcountry skiing and teach learn how to make smart, safe decisions while enjoying it. We are proud to be an AIARE course provider, partnering with professional instructors and exceptional backcountry chefs to provide all-inclusive yurt-based avalanche courses.</p>
+<p>Throughout the season we also offer a number of <a href="classes.html" class='link'>avalanche classes and backcountry skiing clinics</a> to both introduce people to the wonders of backcountry skiing and teach them how to make smart, safe decisions while enjoying it. We are proud to be an AIARE course provider, partnering with professional instructors and exceptional chefs to provide all-inclusive yurt-based avalanche courses.</p>
 
 <img class="u-full-width" src="img/beacon_fluxlines.jpg">
 
 <a href="classes.html" class='bg-yurtski-blue button u-full-width'>Classes at YurtSki</a>
 
 
-<p>Our yurts lie deep in the Montana backcountry and offer unparalleled access to some of Montana’s best powder skiing. Our immediate terrain is situated off a large horseshoe shaped ridge with finger ramps that separate the area into three main bowls which funnel back down to the yurts. The skiing ranges from mellow glades to steep wide open bowls. The area offers exceptional views of the Missions, Swans, and the Bob Marshall/Scapegoat Wilderness and has endless potential.</p>
+<p>Our yurts are nestled deep in the Montana backcountry, high in the Southern Swan Mountains. The trailhead is about 60 minutes from Missoula and 90 minutes from Helena. They offer unparalleled access to some of Montana’s best powder skiing. Our immediate terrain is situated off a large horseshoe shaped ridge with finger ramps that separate the area into three main bowls which funnel back down to the yurts. The skiing ranges from mellow glades to steep wide open bowls. The area offers exceptional views of the Missions, Swans, and the Bob Marshall/Scapegoat Wilderness.</p>
 
 <img class="u-full-width" src="img/skis_and_peaks.jpg">
 
-<p>The yurts sit nestled high in the Southern Swan Mountains of Montana, in between the Mission Mountains and the Bob Marshall Wilderness with a trailhead about an hour away from Missoula and 90 minutes from Helena.</p>
-
-
 <!-- <p class="align-center"><a class='u-full-width link button bg-yurtski-blue' href="book">Book Now</a> -->
 
-
 <h4 class='border-b'>Getting to the Yurts</h4>
-<p class="pt6">The ski into the yurts is 8 miles with 1,500 ft elevation gain. Optionally, there is an 11 mile snowmobile route. </p>
+<p class="pt6">11 miles via snowmachine or 8 miles by skis-only. The first 5 miles into the yurts is along a flat, groomed road. Then you gain nearly 2,000 feet in elevation via a 6 mile road (or 3 mile ski, if you cut the switch backs).</p>
 
-<p>Let us take the load off your back by opting for our <strong>gear haul + tow service</strong>. A gear haul in makes the most of your trip by getting you and your stuff into the yurts so you can ski and enjoy!  We will also make sure to point out the freshwater spring, start you off with a full supply of water, and make sure the firewood is stocked and ready.</p>
+<p>Let us take the load off your back by opting for our <strong>gear haul + tow service</strong>. A gear haul in makes the most of your trip by getting you and your stuff into the yurts so you can ski and enjoy!  We also provide clean sheets and fill 10 gallons of water to start your trip.</p>
 
 <h4 class='border-b'>Life at the Yurts</h4>
 
 <p class="pt6">The yurts feature wood stoves for heat and clotheslines and hooks to hang and dry your gear. Each yurt has a stocked wood pile and axes to keep the stove burning through the night.</p>
 
-<p class="pt6">Each yurt is equipped with a well-stocked kitchen including pots+pans, kettles, knives, cutting boards, utensils, mugs, plates, and bowls for up to 10 people. There are three burner propane stoves and each yurt with three-bin wash basin systems. The Alpine Yurt also features 2 futon couches to kick-back after a long tour.</p>
+<p class="pt6">Each yurt is equipped with a well-stocked kitchen including pots+pans, kettles, knives, cutting boards, utensils, mugs, plates, and bowls for up to 10 people. There are three burner propane stoves and each yurt has three-bin wash basin systems. The Alpine Yurt also features 2 futon couches to kick-back after a long tour.</p>
 
 <img class='u-max-full-width' src='img/alpine-interior-pano.jpg'>
 <p class='align-center caption mb12'>Inside the Alpine Yurt</p>
@@ -342,8 +338,6 @@
 </footer>
 
 <body>
-
----
 
 <!-- Ensure navigation works properly -->
 <script type="text/javascript">
