--- a/rates.html
+++ b/rates.html
@@ -141,28 +141,27 @@
     <div class="ten columns">
 
       <div id="content" class="page-main-content">
-          <img class='pt12 u-full-width' src="/img/yurtski-aerial-labels.jpg">
+          <img class='pt12 u-full-width' src="img/yurts_on_map.jpg">
 
 <p>The Alpine and Lupine Yurts are located about .75 miles apart on the Mt. Morrell road. The Alpine Yurt is closer to the open bowl skiing in the Morrell Mountain Horseshoe while the Lupine Yurt is well situated for skiing the glades between the yurt and the Morrell Mountain Lookout.</p>
 
 <div class="row pt12">
 	<div class="one-half column">
-		<h4><a class='link' href="book#alpine">Alpine Yurt</a></h4>
+		<h4>Lupine Yurt</h4>
+		<p>20' Insulated Yurt with 2 double bunk-beds. Flat rate per night up to 8 people:</p>
+		<p><strong>$250</strong> per weekday night</p>
+		<p><strong>$350</strong> per weekend night</p>
+		<p class='mx20'><strong>+$50</strong> per person over 8 people</p>
+	</div>
+
+	<div class="one-half column">
+		<h4>Alpine Yurt</h4>
 		<p>24' Insulated Yurt with 2 double bunk-beds and 2 futon couches. Flat rate per night up to 8 people:</p>
 		
 		<p><strong>$300</strong> per weekday night</p>
 		<p><strong>$400</strong> per weekend night</p>
 		<p class='mx20'><strong>+$50</strong> per person over 8 people</p>
 
-	</div>
-
-	
-	<div class="one-half column">
-		<h4><a class='link' href="book#lupine">Lupine Yurt</a></h4>
-		<p>20' Insulated Yurt with 2 double bunk-beds. Flat rate per night up to 8 people:</p>
-		<p><strong>$250</strong> per weekday night</p>
-		<p><strong>$350</strong> per weekend night</p>
-		<p class='mx20'><strong>+$50</strong> per person over 8 people</p>
 	</div>
 </div>
 
@@ -172,16 +171,16 @@
 
 	<img class='u-pull-right offset-by-one one-half column' src="img/gearhaul.jpg">
 
-	<p>We will haul you and your gear all the way from the parking lot to the yurts (11 miles on the road).</p>
+	<p>We will haul your crew and all of your gear 11 miles from the parking lot to the yurts, and then back out again at the end of your trip. We will also bring clean sheets and fill 10 gallons of water from the spring to kick off your trip! Gear haul is priced: </p>
 
-	<p><strong>$350</strong> each way for up to 6 people.</p>
-	<p><strong>$700</strong> each way for 7 to 12 people.</p>
+	<p><strong>$600</strong> for up to 6 people.</p>
+	<p class='mx20'><strong>+$150</strong> per additional person</p>
 
-	<p>We have large toboggans to haul your food, gear, and beer that we first bundle up in a tarp to keep dry. We then set out a rope with multiple tow-handles to pull your group: first 5 miles down the Cottonwood Lakes road (slight elevation gain), and then 6-7 miles up the Mt. Morrell road, gaining more than 2,000 feet in elevation.</p>
+	<p>We have large toboggans to haul your food, gear, and beer that we first bundle up in a tarp to keep dry. We then set out a rope with multiple tow-handles to pull your group: first 5 miles down the Cottonwood Lakes road (slight elevation gain), and then 6 miles up the Mt. Morrell road, gaining more than 2,000 feet in elevation.</p>
 
 	<p>Gear hauls are optional, and many groups use their own snow-machines and sleds to get to and from the yurts. Depending on what mother-nature throws your way, it can be an "adventurous day" getting into or out of the yurts.</p>
 
-	<p>If gear haul is available for your trip, it will appear as an add-on option when you <a href='book'>book</a>. It is difficult to schedule last-minute gear hauls, so we ask that you please add a gear haul to your trip at the time of booking.</p>
+	<p>To book a gear haul, choose so at the top of the <a href='book'>booking page</a>, then you can see see the schedules for each yurt and gear haul availability. We do not offer gear hauls on Tuesdays and Saturdays. It is difficult to add gear-hauls onto existing trips, so we ask that you please schedule it up front.</p>
 
 	<p><em>Save the abuse to your own snow-machines and let us haul, we've got the machines and toboggans for the job!</em></p>
 
@@ -260,8 +259,6 @@
 </footer>
 
 <body>
-
----
 
 <!-- Ensure navigation works properly -->
 <script type="text/javascript">
