--- a/book.html
+++ b/book.html
@@ -141,96 +141,231 @@
     <div class="ten columns">
 
       <div id="content" class="page-main-content">
-          <!-- <p>Winter's just around the corner! The yurts will set up by December 3, 2019. Can't wait until then? The <a href="https://montanabackcountryyurts.com/bigbelthut/book">Big Belt Hut</a> is open year round!</p> -->
-	
-<!-- : Catch the corn-skiing this Spring at 25% off with promo code: <em>SUMMERHUT</em></p> -->
-
+          <!-- First, do you want a gear haul? -->
+<h6 class='py6 mr20 inline'>1. Would you like a gear haul and tow into the yurt via snowmobile?</h6>
+<a class='inline link toggle-child-on-click'><em>More Info</em></a>
+<p class='mid-page-info-box'>
+	<img class='u-pull-right one-half column ml12 simple-outline' src='img/gearhaul.jpg'>
+The trip into YurtSki starts with 5 miles of flat travel on the Cottonwood Lakes Road (groomed), and then 6 miles up the Morrell Mountain Lookout Road, gaining nearly 2,000 feet in elevation.
 <br>
-<div class="align-center mb6">
+A <strong>gear haul</strong> makes the most of your trip by hauling both your crew and all of your gear all the way to the yurts via snowmobile. This allows you to pack food in large coolers (convenient), haul more beer, and generally bring more to the yurt. We have the right snowmobiles and extra-large tobaggons for the job.
+<br>
+As part of this service, we will provide clean sheets and collect 10 gallons of water from the spring to get your trip started. On the last day of your trip, we will return to load your gear and tow your group back out. If conditions permit, there is one final pitch of good skiing before towing back along the flat road.
+<br><br>
+<em>Gear haul costs $600 for up to 6 people, and +$150 per person after 6.</em>
+	<br><br>
+	Gear hauls are <strong>not available on Tuesdays and Saturdays</strong>. Please choose now whether your trip will need a gear haul, they are not always possible to add on later.
+	<br><br><a class='align-center button close-parent bg-yurtski-blue'>I understand!</a>
+</p>
+<div class='align-center'>
 	<div class="toggle w3-animate-opacity">
-		<a href="#alpine"><h5 id="alpine-button" onclick="chooseAlpine(this)"> Alpine Yurt</h5></a>
-		<a href="#lupine"><h5 id="lupine-button" onclick="chooseLupine(this)"> Lupine Yurt</h5></a>
+		<h6 id='gear-yes' onClick='gearhaul("yes")'> Yes</h6>
+		<h6 id='gear-no'  onClick='gearhaul("no")'>No </h6>
 	</div>
 </div>
 
+<div id='yurt-chooser' style="display:none;">
+	<h6 class='py6 mr20 inline'>2. Choose a Yurt:</h6><a class='inline link toggle-child-on-click'><em>What's the difference?</em></a>
 
-<div id="book-alpine-yurt">
+	<div class='mid-page-info-box'>
 
+		<div class='row'>
+	<img class='u-full-width' src='img/yurts_on_map.jpg'>
+
+	<p>The Alpine yurt sits about 200 vertical feet higher and 0.75 miles past the Lupine Yurt on the Morrell Mountain Road. Slightly larger, the Alpine Yurt sleeps 10 comfortably while Lupine sleeps 8.</p>
+
+	<p>Both yurts are similarly equipped with 2 double-over-double bunk beds, woodstove, table, and kitchen with propane stoves. Alpine has 2 futon couches that provide sleeping for 2 extra people. The Lupine yurt maybe better suited for skiing off the Lookout/ Supernatural Area of the horseshoe where as the Alpine is slightly better situated for skiing the back bowls.</p>
+</div>
+
+
+		
+		<a class='align-center button close-parent bg-yurtski-blue'>Got it!</a>
+	</div>
+
+	<div class="align-center">
+		<div class="toggle w3-animate-opacity">
+			<a><h5 id="alpine-button" onclick="chooseYurt('alpine')"> Alpine Yurt</h5></a>
+			<a><h5 id="lupine-button" onclick="chooseYurt('lupine')"> Lupine Yurt</h5></a>
+			<!-- <a><em>What's the difference?</em></a> -->
+		</div>
+	</div>
+</div>
+
+<div id='alpine-gear' style='display:none;'>
+	
 	<script type="text/javascript" src="//yurtski.checkfront.com/lib/interface--0.js"></script>
 
 <!-- CHECKFRONT BOOKING PLUGIN v25-->
 <div id="CHECKFRONT_WIDGET_01">
 	<p id="CHECKFRONT_LOADER" style="background: url('//yurtski.checkfront.com/images/loader.gif') left center no-repeat; padding: 5px 5px 5px 20px">Searching Availability...</p></div>
 <script>
-new DROPLET.Widget ({
-host: 'yurtski.checkfront.com',
-target: 'CHECKFRONT_WIDGET_01',
-item_id: '4',
-// date: '20201204',
-pipe: 'https://montanabackcountryyurts.com/assets/checkfront-helper.html',
-provider: 'droplet'
+	new DROPLET.Widget ({
+	host: 'yurtski.checkfront.com',
+	target: 'CHECKFRONT_WIDGET_01',
+	item_id: '53',
+	date: '20211206',
+	pipe: 'https://montanabackcountryyurts.com/assets/checkfront-helper.html',
+	provider: 'droplet'
 }).render();
 </script>
 <noscript><a href="https://yurtski.checkfront.com/reserve/" style="font-size: 16px">Continue to Secure Booking System &raquo;</a></noscript>
-	<hr>
+	
 </div>
-
-
-<div id="book-lupine-yurt">
-
+<div id='lupine-gear' style='display:none;'>
+	
 	<script type="text/javascript" src="//yurtski.checkfront.com/lib/interface--0.js"></script>
 
 <!-- CHECKFRONT BOOKING PLUGIN v25-->
 <div id="CHECKFRONT_WIDGET_02">
 	<p id="CHECKFRONT_LOADER" style="background: url('//yurtski.checkfront.com/images/loader.gif') left center no-repeat; padding: 5px 5px 5px 20px">Searching Availability...</p></div>
 <script>
-new DROPLET.Widget ({
-host: 'yurtski.checkfront.com',
-target: 'CHECKFRONT_WIDGET_02',
-item_id: '2',
-// date: '20201204',
-category_id: '2',
-pipe: 'https://montanabackcountryyurts.com/assets/checkfront-helper.html',
-provider: 'droplet'
+	new DROPLET.Widget ({
+	host: 'yurtski.checkfront.com',
+	target: 'CHECKFRONT_WIDGET_02',
+	item_id: '54',
+	date: '20211206',
+	category_id: '2',
+	pipe: 'https://montanabackcountryyurts.com/assets/checkfront-helper.html',
+	provider: 'droplet'
 }).render();
 </script>
 
-	<hr>
+	
 </div>
+<div id='alpine-no-gear' style='display:none;'>
+	
+	<script type="text/javascript" src="//yurtski.checkfront.com/lib/interface--0.js"></script>
+
+<!-- CHECKFRONT BOOKING PLUGIN v25-->
+<div id="CHECKFRONT_WIDGET_04">
+	<p id="CHECKFRONT_LOADER" style="background: url('//yurtski.checkfront.com/images/loader.gif') left center no-repeat; padding: 5px 5px 5px 20px">Searching Availability...</p></div>
+<script>
+	new DROPLET.Widget ({
+	host: 'yurtski.checkfront.com',
+	target: 'CHECKFRONT_WIDGET_04',
+	item_id: '4',
+	date: '20211206',
+	pipe: 'https://montanabackcountryyurts.com/assets/checkfront-helper.html',
+	provider: 'droplet'
+}).render();
+</script>
+<noscript><a href="https://yurtski.checkfront.com/reserve/" style="font-size: 16px">Continue to Secure Booking System &raquo;</a></noscript>
+	
+</div>
+<div id='lupine-no-gear' style='display:none;'>
+	
+	<script type="text/javascript" src="//yurtski.checkfront.com/lib/interface--0.js"></script>
+
+<!-- CHECKFRONT BOOKING PLUGIN v25-->
+<div id="CHECKFRONT_WIDGET_03">
+	<p id="CHECKFRONT_LOADER" style="background: url('//yurtski.checkfront.com/images/loader.gif') left center no-repeat; padding: 5px 5px 5px 20px">Searching Availability...</p></div>
+<script>
+	new DROPLET.Widget ({
+	host: 'yurtski.checkfront.com',
+	target: 'CHECKFRONT_WIDGET_03',
+	item_id: '2',
+	date: '20211206',
+	category_id: '2',
+	pipe: 'https://montanabackcountryyurts.com/assets/checkfront-helper.html',
+	provider: 'droplet'
+}).render();
+</script>
 
 	
-<br>
+</div>
+
+
+<!-- <br>
 <h6 class='align-center'>You can also purchase <a class='simple-link' href="//montanabackcountryyurts.com/gift.html">Gift Certificates</a> if you'd like to gift a trip to someone else</h6>
 <hr>
+ -->
 
+<script type='text/javascript'>
 
-<script>
+	collapseToggleables(false)
 
-	function chooseAlpine(){
-		document.getElementById('alpine-button').classList += ' chosen'
-		document.getElementById('lupine-button').classList = "";
-		document.getElementById('book-lupine-yurt').classList = "";
-		document.getElementById('book-lupine-yurt').style.display = 'none';
+	STATE.gear = undefined;
+	STATE.yurt = undefined;
+	nurt = undefined; 
 
-		document.getElementById('book-alpine-yurt').style.display = 'block';
-		document.getElementById('book-alpine-yurt').classList += 'fadeIn';
+	loadState()
+
+	if (STATE.gear){
+		gearhaul('yes')
+	}else if (STATE.gear==false){
+		gearhaul('no')
+	}
+	
+	if (STATE.yurt=='alpine'){
+		chooseYurt('alpine')
+		
+	}else if (STATE.yurt=='lupine'){
+		chooseYurt('lupine')
 	}
 
-	function chooseLupine(){
-		document.getElementById('lupine-button').classList += ' chosen'
-		document.getElementById('alpine-button').classList = "";
-		document.getElementById('book-alpine-yurt').classList = "";
-		document.getElementById('book-alpine-yurt').style.display = 'none';
+	function gearhaul(gearHaulStatus){
 
-		document.getElementById('book-lupine-yurt').style.display = 'block';
-		document.getElementById('book-lupine-yurt').classList += 'fadeIn';
+		if(gearHaulStatus=='yes'){
+			STATE.gear = true
+			document.getElementById('gear-yes').classList += ' chosen'
+			document.getElementById('gear-no').classList = "";
+			
+		}else if (gearHaulStatus=='no'){
+			STATE.gear = false
+			// Buttons
+			document.getElementById('gear-no').classList += ' chosen'
+			document.getElementById('gear-yes').classList = "";
+		}
+			
+		// Turn it on if it isn't already!
+		document.getElementById('yurt-chooser').style.display='block';
+		document.getElementById('yurt-chooser').classList += 'fadeIn';
+		updateState();
+		if (STATE.yurt!=undefined && nurt!=undefined){
+			showCalendar()
+		}
 	}
 
-	// Page runtime
-	if (HASH=="#lupine"){
-		chooseLupine();
-	}else{
-		chooseAlpine();
+	function chooseYurt(yurt){
+		if (yurt=="alpine"){
+			STATE.yurt = 'alpine'
+			nurt='lupine'
+		}else if (yurt='lupine'){
+			STATE.yurt = 'lupine'
+			nurt='alpine'
+		}
+
+		document.getElementById(STATE.yurt+'-button').classList += ' chosen'
+		document.getElementById(nurt+'-button').classList = '';
+
+		updateState()
+		showCalendar()
+
+	}
+
+	function showCalendar(){
+		if (STATE.yurt!=undefined){
+			
+			if (STATE.gear){
+				document.getElementById(STATE.yurt+'-gear').style.display='block';
+				document.getElementById(STATE.yurt+'-gear').classList+='fadeIn';
+				document.getElementById(STATE.yurt+'-no-gear').style.display = 'none';
+				document.getElementById(STATE.yurt+'-no-gear').classList = '';
+				document.getElementById(nurt+'-gear').classList = '';
+				document.getElementById(nurt+'-gear').style.display = 'none';
+				document.getElementById(nurt+'-no-gear').classList = '';
+				document.getElementById(nurt+'-no-gear').style.display = 'none';
+			}else{
+				document.getElementById(STATE.yurt+'-no-gear').style.display='block';
+				document.getElementById(STATE.yurt+'-no-gear').classList+='fadeIn';
+				document.getElementById(STATE.yurt+'-gear').style.display = 'none';
+				document.getElementById(STATE.yurt+'-gear').classList = '';
+				document.getElementById(nurt+'-no-gear').style.display = 'none';
+				document.getElementById(nurt+'-no-gear').classList = '';
+				document.getElementById(nurt+'-gear').classList = '';
+				document.getElementById(nurt+'-gear').style.display = 'none';
+			}
+		}
 	}
 
 </script>
@@ -308,8 +443,6 @@ provider: 'droplet'
 </footer>
 
 <body>
-
----
 
 <!-- Ensure navigation works properly -->
 <script type="text/javascript">
