Automagically building YurtSki from moba

--- a/book.html
+++ b/book.html
@@ -282,7 +282,7 @@ As part of this service, we will provide clean sheets and collect 10 gallons of 
 
 <script type='text/javascript'>
 
-	collapseToggleables(false)
+	collapseToggleables()
 
 	STATE.gear = undefined;
 	STATE.yurt = undefined;
